--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <link href="css/print.css" media="print" rel="stylesheet">
 
     <script async src="http://www.google-analytics.com/analytics.js"></script>
-    <script async src="js/perfmatters.js"></script>
+    <script async src="js/perfmatters.min.js"></script>
   </head>
 
   <body>
