--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
       }
 
       .content { padding: 1em 1em; }
-      .content li { list-style-type: none; font-size: 1.1em;}
-      li img { float:left; padding-right: 1em; }
-      li p { font-size: 0.9em; font-style: italic; }
+      .content li { list-style-type: none; font-size: 1.1em; }
+      li img { padding-right: 1em; }
+      li p { font-size: 0.9em; font-style: italic;  }
 
       footer {
         padding: 0 0.5em;
